emoji picker showing onclick

--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "browserify": "^14.0.0",
     "budo": "^9.4.5",
     "clone": "^2.1.0",
+    "emoji-mart": "^0.3.7",
     "emojione-picker": "^1.1.0",
     "express": "^4.14.0",
     "nodemon": "^1.11.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-emoji-picker": "^1.0.12",
     "redux": "^3.6.0",
     "socket.io": "^1.7.2",
     "socket.io-client": "^1.7.2",
